upload all files

--- a/products/blackening/troubleshootingblackening.html
+++ b/products/blackening/troubleshootingblackening.html
@@ -33,6 +33,7 @@
   "description": "น้ำยาจุ่มดำโลหะชนิดเย็น ใช้งานที่อุณหภูมิห้องสำหรับเหล็ก ทองแดง ทองเหลือง ให้ฟิล์มสีดำ/ดำอมฟ้าเพื่อความสวยงามและป้องกันสนิมระดับปานกลาง",
   "image": "https://img5.pic.in.th/file/secure-sv1/copper.png",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
+  "alternateName":["Baume Chemical","Baume"],
   "category": "Blackening / Metal Finishing",
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/blackening/troubleshootingblackening.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
