--- a/products/equipment/toolschemical.html
+++ b/products/equipment/toolschemical.html
@@ -34,6 +34,7 @@
   "image": "https://i.imgur.com/wl25FWQ.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Lab Equipment",
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/equipment/toolschemical.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"10"}
