--- a/products/passivation/index.html
+++ b/products/passivation/index.html
@@ -47,6 +47,7 @@
     "@context":"https://schema.org",
     "@type":"Organization",
     "name":"Baume Chemical",
+    "alternateName":["Baume Chemical","Baume"],
     "url":"https://www.baumechemical.com/",
     "logo":"https://www.baumechemical.com/assets/logo.png",
     "sameAs":[
