--- a/products/passivation/troubleshootinghexavalentchromeblack.html
+++ b/products/passivation/troubleshootinghexavalentchromeblack.html
@@ -34,6 +34,7 @@
   "image": "https://img5.pic.in.th/file/secure-sv1/image2a65d41519ed36e3a.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Zinc Passivation / Hexavalent Black Chromate",
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblack.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"4.9","reviewCount":"27"}
