--- a/products/passivation/yellow-6-passivation-on-zinc.html
+++ b/products/passivation/yellow-6-passivation-on-zinc.html
@@ -34,6 +34,7 @@
   "image": "https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Zinc Post-treatment",
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/passivation/yellow-6-passivation-on-zinc.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"10"}
