--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -49,6 +49,7 @@
     "@context":"https://schema.org",
     "@type":"Organization",
     "name":"Baume Chemical",
+    "alternateName":["Baume Chemical","Baume"],
     "url":"https://www.baumechemical.com/",
     "logo":"https://www.baumechemical.com/assets/logo.png",
     "sameAs":[
