--- a/products/blackening/troubleshootingpatina.html
+++ b/products/blackening/troubleshootingpatina.html
@@ -34,6 +34,7 @@
   "image": "https://img2.pic.in.th/pic/image0-3ef39ee00701bff68.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Patination / Metal Finishing",
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/blackening/troubleshootingpatina.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"18"}
