--- a/products/equipment/platingequipment.html
+++ b/products/equipment/platingequipment.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1, viewport-fit=cover">
 
   <!-- Primary SEO -->
   <title data-i18n-key="page_title">อุปกรณ์งานชุบ (Plating Tools) | Baume Chemical</title>
@@ -11,6 +11,8 @@
   <link rel="canonical" href="https://www.baumechemical.com/products/equipment/platingequipment.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png">
+  <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512.png">
@@ -280,12 +282,12 @@
       <div class="header-right">
         <!-- Primary Navigation -->
         <nav class="primary-nav" aria-label="Primary">
-          <ul class="menu">
-        <a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a>
-        <a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a>
-        <a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a>
-        <a href="https://www.baumechemical.com/contact-us.html" data-i18n-key="nav_contact">Contact Us</a>
-        <a href="https://www.baumechemical.com/blog/" data-i18n-key="nav_blog">Blog</a>
+  <ul class="menu">
+  <li><a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a></li>
+  <li><a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a></li>
+  <li><a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a></li>
+  <li><a href="https://www.baumechemical.com/contact-us.html" data-i18n-key="nav_contact">Contact Us</a></li>
+  <li><a href="https://www.baumechemical.com/blog/" data-i18n-key="nav_blog">Blog</a></li>
 
             <!-- Mobile language row -->
             <li class="lang-li">
@@ -538,18 +540,52 @@
     <div class="backtop" id="backTop"><button aria-label="กลับขึ้นด้านบน">↑</button></div>
   <div class="float-line"><a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener" aria-label="แชท LINE">LINE</a></div>
 
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"CollectionPage",
-    "name":"Plating Tools",
-    "about":["Barrel Tank","Rack Tank","Rectifier","Ultra Filtration","Ultrasonic Cleaner","Heater","Titanium Heater","Plating Chiller","Centrifugal Dryer"],
-    "inLanguage":"th,en",
-    "image":"https://i.imgur.com/v3Bp18o.jpeg",
-    "publisher":{"@type":"Organization","name":"Baume Chemical"}
-  }
-  </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "WebSite",
+      "@id": "https://www.baumechemical.com/#website",
+      "url": "https://www.baumechemical.com/",
+      "name": "Baume Chemical",
+      "alternateName": ["Baume Chemical Blog","Baume"],
+      "inLanguage": ["th","en"],
+      "publisher": { "@id": "https://www.baumechemical.com/#organization" }
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://www.baumechemical.com/#organization",
+      "name": "Baume Chemical",
+      "url": "https://www.baumechemical.com/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://img2.pic.in.th/pic/Baume.jpg"
+      }
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.baumechemical.com/products/equipment/platingequipment.html#breadcrumb",
+      "itemListElement": [
+        { "@type": "ListItem", "position": 1, "name": "Baume Chemical", "item": "https://www.baumechemical.com/" },
+        { "@type": "ListItem", "position": 2, "name": "Equipment", "item": "https://www.baumechemical.com/products/equipment/" },
+        { "@type": "ListItem", "position": 3, "name": "Plating Tools", "item": "https://www.baumechemical.com/products/equipment/platingequipment.html" }
+      ]
+    },
+    {
+      "@type": "CollectionPage",
+      "@id": "https://www.baumechemical.com/products/equipment/platingequipment.html#webpage",
+      "url": "https://www.baumechemical.com/products/equipment/platingequipment.html",
+      "name": "Plating Tools",
+      "isPartOf": { "@id": "https://www.baumechemical.com/#website" },
+      "inLanguage": "th",
+      "image": "https://i.imgur.com/v3Bp18o.jpeg",
+      "about": ["Barrel Tank","Rack Tank","Rectifier","Ultra Filtration","Ultrasonic Cleaner","Heater","Titanium Heater","Plating Chiller","Centrifugal Dryer"],
+      "publisher": { "@id": "https://www.baumechemical.com/#organization" }
+    }
+  ]
+}
+</script>
 
   <!-- JS: nav-toggle + sticky bg + back + i18n + card lift + TOC spy -->
   <script>
@@ -559,7 +595,7 @@
       const toggle = document.querySelector('.site-header .nav-toggle');
 
       function setHeaderH(){
-        const h = Math.round(header?.getBoundingClientRect().height || 64);
+        const h = header ? Math.round(header.getBoundingClientRect().height) : 64;
         document.documentElement.style.setProperty('--header-h', h + 'px');
       }
       function onScroll(){
