--- a/products/passivation/troubleshootinghexavalentchromeblue.html
+++ b/products/passivation/troubleshootinghexavalentchromeblue.html
@@ -34,6 +34,7 @@
   "image": "https://img2.pic.in.th/pic/image0-4.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Zinc Passivation / Hexavalent Blue Chromate",
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/passivation/troubleshootinghexavalentchromeblue.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"4.8","reviewCount":"19"}
