--- a/products/passivation/troubleshootingtrivalentchromeblack.html
+++ b/products/passivation/troubleshootingtrivalentchromeblack.html
@@ -34,6 +34,7 @@
   "image": "https://i.imgur.com/LrItUAB.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Zinc Passivation / Trivalent Black",
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/passivation/troubleshootingtrivalentchromeblack.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"4.9","reviewCount":"32"}
