--- a/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
@@ -34,6 +34,7 @@
   "image": "https://img2.pic.in.th/pic/thumbnail-1.jpg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Brass Plating",
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"12"}
