--- a/products/polishing/aluminum-electropolishing-solution.html
+++ b/products/polishing/aluminum-electropolishing-solution.html
@@ -34,6 +34,7 @@
     "image":"https://img2.pic.in.th/pic/image0-5.jpeg",
     "brand":{"@type":"Brand","name":"Baume Chemical"},
     "category":"Electropolishing",
+    "alternateName":["Baume Chemical","Baume"],
     "inLanguage":"th",
     "offers":{"@type":"Offer","url":"https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html","priceCurrency":"THB","price":"0.00","availability":"https://schema.org/InStock"},
     "aggregateRating":{"@type":"AggregateRating","ratingValue":"5","reviewCount":"12"}
