upload all files

--- a/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
+++ b/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
@@ -2,11 +2,11 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title data-i18n-key="title">CopperBrite 900 — Bright Acid Copper | Baume Chemical</title>
 
   <!-- SEO base -->
-  <meta name="description" content="Bright Acid Copper: เงาสูงทั่วช่วงกระแส (LCD–HCD), Leveling ดี, สร้างความหนาเร็ว ใช้ได้กับงานตกแต่ง/PCB พร้อมสูตร Make-up, Working Data และการควบคุมคลอไรด์">
+  <meta name="description" id="metaDesc" content="Bright Acid Copper: เงาสูงทั่วช่วงกระแส (LCD–HCD), Leveling ดี, สร้างความหนาเร็ว ใช้ได้กับงานตกแต่ง/PCB พร้อมสูตร Make-up, Working Data และการควบคุมคลอไรด์">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -19,8 +19,13 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="CopperBrite 900 — Bright Acid Copper">
-  <meta property="og:description" content="เงาสูงทั่วช่วงกระแส Leveling ดี สร้างความหนาเร็ว สำหรับงานตกแต่ง/PCB พร้อมสูตร Make-up และพารามิเตอร์การเดินงาน">
+  <meta property="og:locale" content="th_TH">
+  <meta property="og:image:alt" content="Bright acid copper bath / glossy copper deposit">
+  <meta name="twitter:title" id="twTitle" content="CopperBrite 900 — Bright Acid Copper">
+  <meta name="twitter:description" id="twDesc" content="เงาสูงทั่วช่วงกระแส Leveling ดี สร้างความหนาเร็ว สำหรับงานตกแต่ง/PCB พร้อมสูตร Make-up และพารามิเตอร์">
+
+  <meta property="og:title" id="ogTitle" content="CopperBrite 900 — Bright Acid Copper">
+  <meta property="og:description" id="ogDesc" content="เงาสูงทั่วช่วงกระแส Leveling ดี สร้างความหนาเร็ว สำหรับงานตกแต่ง/PCB พร้อมสูตร Make-up และพารามิเตอร์การเดินงาน">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -220,7 +225,47 @@
     html{scroll-behavior:smooth}
     .section-block{scroll-margin-top:calc(var(--header-h) + 18px)}
   </style>
-</style>
+  <script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@graph":[
+    {
+      "@type":"WebSite",
+      "@id":"https://www.baumechemical.com/#website",
+      "url":"https://www.baumechemical.com/",
+      "name":"Baume Chemical",
+      "alternateName":["Baume Chemical","Baume"],
+      "inLanguage":["th","en"]
+    },
+    {
+      "@type":"Organization",
+      "@id":"https://www.baumechemical.com/#organization",
+      "name":"Baume Chemical",
+      "alternateName":["Baume Chemical","Baume"],
+      "url":"https://www.baumechemical.com/",
+      "logo":"https://www.baumechemical.com/assets/logo.png"
+    },
+    {
+      "@type":"Product",
+      "@id":"https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/#product",
+      "name":"CopperBrite 900 — Bright Acid Copper",
+      "brand":{"@id":"https://www.baumechemical.com/#organization"},
+      "category":"Electroplating chemicals",
+      "description":"Bright acid copper system for decorative and PCB; high brightness across LCD–HCD, strong leveling, fast build.",
+      "url":"https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/",
+      "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg"
+    },
+    {
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+        {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+        {"@type":"ListItem","position":3,"name":"CopperBrite 900"}
+      ]
+    }
+  ]
+}
+</script>
 </head>
 <body>
 
@@ -236,7 +281,7 @@
         <span class="bar"></span>
       </button>
 
-      <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
+      <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="false">
         <a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a>
         <a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a>
         <a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a>
@@ -456,7 +501,7 @@
               <tr><td data-i18n-key="mk_h2so4">กรดซัลฟูริก (เกรดแลป)</td><td>70</td><td>70–90</td><td>g/L</td></tr>
               <tr><td data-i18n-key="mk_cl">คลอไรด์</td><td>100</td><td>70–120</td><td>mg/L</td></tr>
               <tr><td data-i18n-key="mk_mu">CopperBrite 900MU</td><td>8</td><td>6–10</td><td>mL/L</td></tr>
-              <tr><td data-i18n-key="mk_a">CopperBrite 900A</td><td>0.5</td><td>0.6–0.8</td><td>mL/L</td></tr>
+              <tr><td data-i18n-key="mk_a">CopperBrite 900A</td><td>0.7</td><td>0.6–0.8</td><td>mL/L</td></tr>
               <tr><td data-i18n-key="mk_b">CopperBrite 900B</td><td>0.4</td><td>0.3–0.6</td><td>mL/L</td></tr>
             </tbody>
           </table>
@@ -545,7 +590,7 @@
             </thead>
             <tbody>
               <tr><td data-i18n-key="ad_mu">CopperBrite 900MU</td><td>1.0 L</td><td>0.5–1.5 L</td><td data-i18n-key="ad_mu_note">เติมตาม drag-out หรือสัดส่วนการเติม CuSO₄</td></tr>
-              <tr><td data-i18n-key="ad_a">CopperBrite 900A</td><td>1.0 L</td><td>0.5–1.0 L</td><td>—</td></tr>
+              <tr><td data-i18n-key="ad_a">CopperBrite 900A</td><td>0.8 L</td><td>0.5–1.0 L</td><td>—</td></tr>
               <tr><td data-i18n-key="ad_b">CopperBrite 900B</td><td>0.6 L</td><td>0.3–1.0 L</td><td>—</td></tr>
             </tbody>
           </table>
@@ -864,6 +909,28 @@ st_1: "Add deionized water to about 50% of tank volume.", st_2: "Add activated c
     };
 
     function applyLang(lang){
+      const meta = {
+  desc: document.getElementById('metaDesc'),
+  ogT:  document.getElementById('ogTitle'),
+  ogD:  document.getElementById('ogDesc'),
+  twT:  document.getElementById('twTitle'),
+  twD:  document.getElementById('twDesc')
+};
+
+if (sel==='en'){
+  meta.desc?.setAttribute('content', 'High brightness across LCD–HCD ...');
+  meta.ogT?.setAttribute('content', 'CopperBrite 900 — Bright Acid Copper');
+  meta.ogD?.setAttribute('content', 'High brightness, strong leveling ...');
+  meta.twT?.setAttribute('content', 'CopperBrite 900 — Bright Acid Copper');
+  meta.twD?.setAttribute('content', 'High brightness across LCD–HCD ...');
+} else {
+  meta.desc?.setAttribute('content', 'Bright Acid Copper: เงาสูงทั่วช่วงกระแส ...');
+  meta.ogT?.setAttribute('content', 'CopperBrite 900 — Bright Acid Copper');
+  meta.ogD?.setAttribute('content', 'เงาสูงทั่วช่วงกระแส Leveling ดี ...');
+  meta.twT?.setAttribute('content', 'CopperBrite 900 — Bright Acid Copper');
+  meta.twD?.setAttribute('content', 'เงาสูงทั่วช่วงกระแส Leveling ดี ...');
+}
+
       const sel = (lang === 'en') ? 'en' : 'th';
       document.documentElement.lang = sel;
       els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === sel)));
@@ -894,9 +961,10 @@ st_1: "Add deionized water to about 50% of tank volume.", st_2: "Add activated c
   <script>
     (function(){
       const header = document.getElementById('siteHeader');
-      const toggle = header?.querySelector('.nav-toggle');
+      const toggle = header ? header.querySelector('.nav-toggle') : null;
       const nav = document.getElementById('primary-nav');
       const scrim = document.querySelector('.menu-scrim');
+      nav && nav.setAttribute('aria-hidden','false'); // default for desktop
 
       const setH = ()=>{ const h = header ? Math.round(header.getBoundingClientRect().height) : 64; document.documentElement.style.setProperty('--header-h', h + 'px'); };
       const onScroll = ()=> header && header.classList.toggle('is-scrolled', (window.scrollY||0) > 10);
