--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -2,11 +2,11 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title data-i18n-key="title">Alkaline Copper Strike — ชั้นรองพื้นทองแดง | Baume Chemical</title>
 
   <!-- SEO base -->
-  <meta name="description" content="Alkaline Copper (Strike) ชั้นรองพื้น/ชั้นกาวก่อน Acid Copper: ทำไมต้องใช้ด่าง, คุณสมบัติ, ความแตกต่าง Acid vs Alkaline, ฟีเจอร์ 6 ข้อ, สูตรเดินบ่อ และพารามิเตอร์หลัก">
+  <meta name="description" content="Alkaline Copper (Strike) ชั้นรองพื้น/ชั้นกาวก่อน Acid Copper: ทำไมต้องใช้ด่าง, คุณสมบัติ, ความแตกต่าง Acid vs Alkaline, สูตรเดินบ่อ และพารามิเตอร์หลัก">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copper/alkaline-strike.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -18,9 +18,16 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
+  <meta property="og:locale" content="th_TH">
+  <meta property="og:image:alt" content="Alkaline copper strike bath / matte thin copper layer">
+  <meta name="twitter:title" id="twTitle" content="Alkaline Copper Strike — ชั้นรองพื้นทองแดง">
+  <meta name="twitter:description" id="twDesc" content="Alkaline Copper (Strike) ชั้นรองพื้น/ชั้นกาวก่อน Acid Copper: ทำไมต้องใช้ด่าง, คุณสมบัติ, ความแตกต่าง Acid vs Alkaline, สูตรเดินบ่อ และพารามิเตอร์หลัก">
+  <meta name="description" id="metaDesc" content="Alkaline Copper (Strike) ชั้นรองพื้น/ชั้นกาวก่อน Acid Copper: ทำไมต้องใช้ด่าง, คุณสมบัติ, ความแตกต่าง Acid vs Alkaline, สูตรเดินบ่อ และพารามิเตอร์หลัก">
+  <meta property="og:title" id="ogTitle" content="Alkaline Copper Strike — ชั้นรองพื้นทองแดง">
+  <meta property="og:description" id="ogDesc" content="ชั้นกาวสำหรับเหล็ก/ซิงค์ ป้องกัน displacement, Throwing power สูง, ผิวด้านบาง 1–3 µm และรองรับ Acid Copper/Ni/Cr ชุบต่อ">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Alkaline Copper Strike — ชั้นรองพื้นทองแดง">
-  <meta property="og:description" content="ชั้นกาวสำหรับเหล็ก/ซิงค์ ป้องกัน displacement, Throwing power สูง, ผิวด้านบาง 1–3 µm และรองรับ Acid Copper/Ni/Cr ต่อ">
+  <meta property="og:description" content="ชั้นกาวสำหรับเหล็ก/ซิงค์ ป้องกัน displacement, Throwing power สูง, ผิวด้านบาง 1–3 µm และรองรับ Acid Copper/Ni/Cr ชุบต่อ">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copper/alkaline-strike.html">
   <meta property="og:image" content="https://i.imgur.com/hxd5AMV.jpeg">
   <meta name="twitter:card" content="summary_large_image">
@@ -219,6 +226,58 @@
     html{scroll-behavior:smooth}
     .section-block{scroll-margin-top:calc(var(--header-h) + 18px)}
   </style>
+  <script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@graph":[
+    {
+      "@type":"WebSite",
+      "@id":"https://www.baumechemical.com/#website",
+      "url":"https://www.baumechemical.com/",
+      "name":"Baume Chemical",
+      "alternateName":["Baume Chemical","Baume"],
+      "inLanguage":["th","en"]
+    },
+    {
+      "@type":"Organization",
+      "@id":"https://www.baumechemical.com/#org",
+      "name":"Baume Chemical",
+      "alternateName":["Baume Chemical","Baume"],
+      "url":"https://www.baumechemical.com/",
+      "logo":"https://www.baumechemical.com/assets/logo.png"
+    },
+    {
+      "@type":"TechArticle",
+      "@id":"https://www.baumechemical.com/products/platingcoating/copper/alkaline-strike.html#article",
+      "headline":"Alkaline Copper Strike — ชั้นรองพื้นทองแดง",
+      "inLanguage":"th",
+      "about":"Alkaline copper strike (cyanide/non-cyanide). Purpose, features, make-up and parameters.",
+      "author":{"@id":"https://www.baumechemical.com/#org"},
+      "publisher":{"@id":"https://www.baumechemical.com/#org"},
+      "image":"https://i.imgur.com/hxd5AMV.jpeg",
+      "mainEntityOfPage":{"@id":"https://www.baumechemical.com/#website"}
+    },
+    {
+      "@type":"Product",
+      "@id":"https://www.baumechemical.com/products/platingcoating/copper/alkaline-strike.html#product",
+      "name":"Alkaline Copper Strike",
+      "brand":{"@id":"https://www.baumechemical.com/#org"},
+      "category":"Electroplating chemicals",
+      "description":"Alkaline copper undercoat for steel/zinc; high throwing power; 1–3 µm matte; ready for Acid Cu/Ni/Cr.",
+      "image":"https://i.imgur.com/hxd5AMV.jpeg",
+      "url":"https://www.baumechemical.com/products/platingcoating/copper/alkaline-strike.html"
+    },
+    {
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
+        {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+        {"@type":"ListItem","position":3,"name":"Alkaline Copper Strike"}
+      ]
+    }
+  ]
+}
+</script>
 </head>
 <body>
 
@@ -234,7 +293,7 @@
         <span class="bar"></span>
       </button>
 
-      <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
+      <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="false">
         <a href="https://www.baumechemical.com/index.html" data-i18n-key="nav_home">Home</a>
         <a href="https://www.baumechemical.com/about-us.html" data-i18n-key="nav_about">About us</a>
         <a href="https://www.baumechemical.com/products.html" data-i18n-key="nav_products" aria-current="page">Products</a>
@@ -274,7 +333,7 @@
           <a class="toc-chip" href="#features" data-i18n-key="toc_features">จุดเด่นของน้ำยา</a>
           <a class="toc-chip" href="#intro" data-i18n-key="toc_intro">ภาพรวม</a>
           <a class="toc-chip" href="#compare" data-i18n-key="toc_compare">Alkaline vs Acid Copper</a>
-          <a class="toc-chip" href="#acidcopper" data-i18n-key="toc_acidcopper">Bright Acid Copper (Build)</a>
+          <a class="toc-chip" href="#cyanidecopper" data-i18n-key="toc_cyanide">Cyanide Copper</a>
         </p>
       </nav>
 
@@ -373,7 +432,7 @@
           <table>
             <thead>
               <tr>
-                <th data-i18n-key="cmp_th_attr">ลักษณะ</th>
+                <th scope="col" data-i18n-key="cmp_th_attr">ลักษณะ</th>
                 <th data-i18n-key="cmp_th_alk">Alkaline Copper</th>
                 <th data-i18n-key="cmp_th_acid">Acid Copper</th>
               </tr>
@@ -405,7 +464,7 @@
       </section>
 
 <!-- Cyanide Copper (replaces Bright Acid Copper) -->
-<section id="acidcopper" class="reveal section-block" aria-labelledby="cyanidecopper-h">
+<section id="cyanidecopper" class="reveal section-block" aria-labelledby="cyanidecopper-h">
   <h2 id="cyanidecopper-h" class="section" data-i18n-key="cyan_h">Cyanide Copper • น้ำยาชุบทองแดงด่าง</h2>
   <p class="lead" data-i18n-key="cyan_lead">
     น้ำยาทองแดงด่างชนิดเงาสำหรับเคลือบผิวโลหะ ใช้ได้บนเหล็ก ทองเหลือง และซิงค์ฉีด ผิวเคลือบสม่ำเสมอ ทนสึก ควบคุมง่าย และโดยทั่วไปไม่ต้อง Activate ระหว่างการชุบทองแดงรองพื้นก่อนขึ้นนิกเกิล
@@ -553,7 +612,7 @@
           <h3 class="footer-title" data-i18n-key="footer_contact">ติดต่อเรา</h3>
           <ul class="footer-list">
             <li>✉️ : <a href="mailto:contact@baumechemical.com">contact@baumechemical.com</a></li>
-            <li>💬 : <a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener">@baumechemical</a></li>
+            <li>💬 : <a href="https://line.me/ti/p/~baumechemical" target="_blank" rel="noopener noreferrer">@baumechemical</a></li>
             <li>🌐 : <a href="https://www.baumechemical.com/">baumechemical.com</a></li>
           </ul>
         </section>
@@ -588,7 +647,7 @@
         toc_features:"จุดเด่นของน้ำยา",
         toc_why:"ชุบทองแดงด้วยสารละลายด่าง",
         toc_compare:"Alkaline vs Acid Copper",
-        toc_acidcopper:"Bright Acid Copper (Build)",
+        toc_cyanide:"Cyanide Copper",
 
       intro_h: "ภาพรวม",
       intro_p1: "การชุบทองแดงด่าง (<em>Alkaline Copper Plating</em>) คือกระบวนการชุบด้วยไฟฟ้าที่ใช้สารละลายที่มีความเป็นด่าง (pH สูง) เคลือบทองแดงลงบนชิ้นงาน โดยทั่วไปสารละลายกลุ่มนี้มักมีสารประกอบไซยาไนด์ซึ่งมีความเป็นพิษสูงและต้องควบคุมอย่างเคร่งครัด",
@@ -737,7 +796,7 @@
         toc_features:"key features",
         toc_why:"Alkaline Copper",
         toc_compare:"Alkaline vs Acid Copper",
-        toc_acidcopper:"Bright Acid Copper (Build)",
+        toc_cyanide:"Cyanide Copper",
 
       intro_h: "Overview",
       intro_p1: "Alkaline Copper Plating is an electrolytic process that deposits copper from a high-pH solution onto the workpiece. Such baths commonly contain cyanide species, which are highly toxic and must be strictly controlled.",
@@ -880,6 +939,20 @@
     };
 
     function applyLang(lang){
+      const meta = {
+      desc: document.getElementById('metaDesc'),
+       ogT:  document.getElementById('ogTitle'),
+       ogD:  document.getElementById('ogDesc'),
+       twT:  document.getElementById('twTitle'),
+       twD:  document.getElementById('twDesc')
+      };
+      if (sel==='en'){
+ meta.desc?.setAttribute('content','Alkaline baths also exhibit excellent throwing power, enabling uniform coverage even on complex parts with recesses and contours. The deposit is naturally thin and slightly matte, which makes it an ideal undercoat before building thickness in subsequent steps.');
+ meta.ogT?.setAttribute('content','Alkaline Copper Strike — Adhesion Undercoat');
+ meta.ogD?.setAttribute('content','Undercoat for steel/zinc, high throwing power, 1–3 µm matte layer; ready for Acid Cu/Ni/Cr.');
+ meta.twT?.setAttribute('content','Alkaline Copper Strike — Adhesion Undercoat');
+ meta.twD?.setAttribute('content','Undercoat for steel/zinc Build thickness smooth bright');
+ }
       const sel = (lang === 'en') ? 'en' : 'th';
       document.documentElement.lang = sel;
       els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === sel)));
@@ -911,9 +984,10 @@
   <script>
     (function(){
       const header = document.getElementById('siteHeader');
-      const toggle = header?.querySelector('.nav-toggle');
+      const toggle = header ? header.querySelector('.nav-toggle') : null;
       const nav = document.getElementById('primary-nav');
       const scrim = document.querySelector('.menu-scrim');
+      nav && nav.setAttribute('aria-hidden','false'); // desktop default
 
       const setH = ()=>{ const h = header ? Math.round(header.getBoundingClientRect().height) : 64; document.documentElement.style.setProperty('--header-h', h + 'px'); };
       const onScroll = ()=> header && header.classList.toggle('is-scrolled', (window.scrollY||0) > 10);
