--- a/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
+++ b/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
@@ -34,6 +34,7 @@
   "image": "https://i.imgur.com/yGMC3gr.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Chrome Plating",
+  "alternateName":["Baume Chemical","Baume"]
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"}
 }
