upload all files

--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -279,7 +279,7 @@
       <nav id="toc" class="reveal" aria-label="สารบัญ">
         <h2 class="section" data-i18n-key="toc_title">สารบัญ</h2>
         <p>
-          <a class="toc-chip" href="#features" data-i18n-key="toc_features">จุดเด่น (Feature cards)</a>
+          <a class="toc-chip" href="#features" data-i18n-key="toc_features">จุดเด่นของน้ำยา</a>
           <a class="toc-chip" href="#intro" data-i18n-key="toc_intro">ภาพรวมกระบวนการ</a>
           <a class="toc-chip" href="#product" data-i18n-key="toc_product">ข้อมูลผลิตภัณฑ์</a>
           <a class="toc-chip" href="#operating" data-i18n-key="toc_operating">สภาวะเดินงาน</a>
@@ -612,7 +612,7 @@
 
         /* TOC */
         toc_title: "สารบัญ",
-        toc_features: "จุดเด่น (Feature cards)",
+        toc_features: "จุดเด่นของน้ำยา",
         toc_intro: "ภาพรวมกระบวนการ",
         toc_product: "ข้อมูลผลิตภัณฑ์",
         toc_composition: "องค์ประกอบบ่อ (Make-up)",
@@ -784,7 +784,7 @@
 
         /* TOC */
         toc_title: "Contents",
-        toc_features: "Highlights (Feature cards)",
+        toc_features: "Highlights",
         toc_intro: "Process overview",
         toc_product: "Product info",
         toc_composition: "Bath composition (Make-up)",
