--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
@@ -34,7 +34,7 @@
   "image": "https://i.imgur.com/c7PJfsW.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Protective Treatment",
-  "alternateName":["Baume Chemical","Baume"]
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/protective/e-coat-pu/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"12"}
