--- a/products/platingcoating/electrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/index.html
@@ -45,7 +45,7 @@
     "@context":"https://schema.org",
     "@type":"CollectionPage",
     "name":"Electrophoretic Lacquer (E-coat)",
-    "alternateName":["Baume Chemical","Baume"]
+    "alternateName":["Baume Chemical","Baume"],
     "inLanguage":"th",
     "url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/",
     "description":"Acrylic and Polyurethane electrophoretic lacquer systems for protective, glossy, corrosion-resistant finishes."
