--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -34,7 +34,7 @@
   "image": "https://i.imgur.com/IGRAqiw.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Black Nickel Plating",
-  "alternateName":["Baume Chemical","Baume"]
+  "alternateName":["Baume Chemical","Baume"],
   "inLanguage": "th",
   "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"10"}
