--- a/products/platingcoating/nickelplating/troubleshootingennickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingennickel/index.html
@@ -24,6 +24,16 @@
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingennickel/index.html" />
   <meta property="og:image" content="https://i.imgur.com/gQDiFMo.jpeg" />
   <meta name="twitter:card" content="summary_large_image" />
+  <!-- Open Graph i18n/details -->
+<meta property="og:locale" content="th_TH">
+<meta property="og:locale:alternate" content="en_US">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="EN Nickel (Electroless Nickel) — NI-508 | Baume Chemical">
+<meta name="twitter:title" content="EN Nickel (Electroless Nickel) — NI-508">
+<meta name="twitter:description" content="ภาพรวม จุดเด่น สูตรเมคอัพ พารามิเตอร์เดินงาน ขั้นตอนชุบ การปรับเติม อุปกรณ์ และความปลอดภัย">
+<meta name="twitter:image" content="https://i.imgur.com/gQDiFMo.jpeg">
+<meta name="twitter:image:alt" content="EN Nickel (Electroless Nickel) — NI-508">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
@@ -190,6 +200,7 @@
     html{scroll-behavior:smooth}
     .section-block{scroll-margin-top:calc(var(--header-h) + 18px)}
   </style>
+  
 </head>
 <body>
 
