--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -32,6 +32,7 @@
     "headline":"Nickel Plating — ชุบนิกเกิลเงา",
     "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg",
     "author":{"@type":"Organization","name":"Baume Chemical"},
+    "alternateName":["Baume Chemical","Baume"],
     "inLanguage":"th",
     "about":"Nickel electroplating and electroless nickel (EN) overview with Watt’s bath."
   }
